[workspace]
resolver = "2"
members = [
    "balance_tree",
    "bfs_traverse",
    "binary_tree_path", "construct_maximum_binary_tree", "has_path_sum",
    "invert_tree",
    "is_symmetric",
    "iteration_traverse",
    "max_depth", "merge_trees",
    "min_depth",
    "most_left_on_bottom", "rebuild_tree_by_2_traversal",
    "recursive_traverse",
    "sum_of_left_leaves",
]
