[workspace]
resolver = "2"
members = [
    "balance_tree",
    "bfs_traverse", "binary_search_tree",
    "binary_tree_path", "construct_maximum_binary_tree", "find_mode", "get_minimum_difference", "has_path_sum",
    "invert_tree",
    "is_symmetric", "is_valid_bst",
    "iteration_traverse", "lowest_common_ancestor",
    "max_depth", "merge_trees",
    "min_depth",
    "most_left_on_bottom", "rebuild_tree_by_2_traversal",
    "recursive_traverse",
    "sum_of_left_leaves",
]
